--- a/gwent/templates/index.html
+++ b/gwent/templates/index.html
@@ -9,6 +9,9 @@
 	<body id="body">
 		Welcome to the unofficial Gwent Project!
 		<br>
-		Go ahead and <a href="admin/login/?next=/gwent_ind/">login</a>
+		Go ahead and login:</a>
+		<div class="login">
+			{% include 'login.html'%}
+		</div>
 	</body>
 </html>
